Revert "Revert "fix button alignment issues on narrow screens""
This reverts commit 3f2b81fd44e0d2239ed97eec594029428575a277.

--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,7 @@
 }
 
 .nav-button {
-    display: inline-block;
+    display: inline-grid;
     margin-left: auto;
     margin-right: auto;
     color: white;
@@ -128,7 +128,10 @@
     width: 180px;
     padding-top: 15px;
     padding-bottom: 15px;
+
+
     transition: background .5s;
+
 }
 
 .nav-button:hover {
